solved hero align problem

--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+
+
 *{
     margin: 0;
     padding: 0;
@@ -97,6 +103,11 @@ top: 0%;
 bottom: 4.63%;
 
 }
+.lekha
+{
+    margin-left: 200px;
+    margin-right: 100px;
+}
 .title1
 {
     /* "In the near future, I hope to become a Developer." */
@@ -134,6 +145,7 @@ text-align: center;
 
 width: 852px;
 height: 52px;
+
 /* Auto layout */
 
 gap: 24;
@@ -153,6 +165,7 @@ font-weight: 400;
 line-height: 26px;
 letter-spacing: 0%;
 text-align: center;
+
 }
 .btn
 {
@@ -174,7 +187,7 @@ flex: none;
 order: 1;
 flex-grow: 0;
 margin: 75px ;
-margin-left: 400px;
+margin-left: 350px;
 /* styles */
 border-radius: 8px;
 
